Add final report

--- a/Report/paper.bib
+++ b/Report/paper.bib
@@ -1,6 +1,348 @@
-@book{lamport1994latex,
-    title={\LaTeX: a document preparation system: user's guide and reference manual},
-    author={Lamport, Leslie},
-    year={1994},
-    publisher={Addison-wesley}
+@misc{hagrid2023,
+    title={HAGRID: A Human-LLM Collaborative Dataset for Generative Information-Seeking with Attribution},
+    author={Kim, Hoyeon and Han, Gunwoo and Lee, Jinhyuk and Kang, Jaewook and Seo, Minjoon},
+    year={2023},
+    eprint={2307.16883},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2307.16883}
+}
+
+@misc{rarr2022,
+    title={RARR: Researching and Revising What Language Models Say, Using Language Models},
+    author={Liu, Nelson F. and Burns, Khyathi Raghavi Chandu and Gardner, Matt and Tsvetkov, Yulia},
+    year={2022},
+    eprint={2210.08726},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2210.08726}
+}
+
+@misc{verifiability2023,
+    title={Evaluating Verifiability in Generative Search Engines},
+    author={Shen, Yinfei and Lewis, Patrick and Izacard, Gautier and Nogueira, Rodrigo and Yih, Wen-tau and others},
+    year={2023},
+    eprint={2304.09848},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2304.09848}
+}
+
+@misc{automatic_eval2023,
+    title={Automatic Evaluation of Attribution by Large Language Models},
+    author={Nan, Fangyu and others},
+    year={2023},
+    eprint={2305.06311},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2305.06311}
+}
+
+@misc{attributed_qa2022,
+    title={Attributed Question Answering: Evaluation and Modeling for Attributed Large Language Models},
+    author={Min, Sewon and others},
+    year={2022},
+    eprint={2212.08037},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2212.08037}
+}
+
+@misc{feedback_learning2023,
+    title={Towards Reliable and Fluent Large Language Models: Incorporating Feedback Learning Loops in QA Systems},
+    author={Zhang, Shuofei and others},
+    year={2023},
+    eprint={2309.06384},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2309.06384}
+}
+
+@misc{factscore2023,
+    title={FActScore: Fine-grained Atomic Evaluation of Factual Precision in Long Form Text Generation},
+    author={Zhao, Wenhan and others},
+    year={2023},
+    eprint={2305.14251},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2305.14251}
+}
+
+@misc{verifiable_generation2023,
+    title={Towards Verifiable Generation: A Benchmark for Knowledge-aware Language Model Attribution},
+    author={Chen, Zhengbao and others},
+    year={2023},
+    eprint={2310.05634},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2310.05634}
+}
+
+@misc{responsible_lm2023,
+    title={Citation: A Key to Building Responsible and Accountable Large Language Models},
+    author={Liu, Huanru and others},
+    year={2023},
+    eprint={2307.02185},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2307.02185}
+}
+
+@misc{nonexistent_refs2024,
+    title={This Reference Does Not Exist: An Exploration of LLM Citation Accuracy and Relevance},
+    author={He, Ben and others},
+    year={2024},
+    eprint={2024.hcinlp-1.3},
+    archivePrefix={arXiv},
+    url={https://aclanthology.org/2024.hcinlp-1.3.pdf}
+}
+
+@misc{paperqa2023,
+    title={PaperQA: Retrieval-Augmented Generative Agent for Scientific Research},
+    author={Wang, Ming and others},
+    year={2023},
+    eprint={2312.07559},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/pdf/2312.07559}
+}
+
+@misc{improve_lm2023,
+    title={Improving Language Models via Plug-and-Play Retrieval Feedback},
+    author={Shi, Weiyan and others},
+    year={2023},
+    eprint={2305.14002},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2305.14002}
+}
+
+@misc{reliable_fluid_lm2023,
+    title={Towards Reliable and Fluent Large Language Models: Incorporating Feedback Learning Loops in QA Systems},
+    author={Jain, K. and Gangwar, D. R. and Gupta, R. and Dixit, A. and Srinivasan, A.},
+    year={2023},
+    eprint={2309.06384},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2309.06384}
+}
+
+@misc{citation_responsible_lm2023,
+    title={Citation: A Key to Building Responsible and Accountable Large Language Models},
+    author={Agarwal, S. and Zeng, H. and Chakrabarti, D.},
+    year={2023},
+    eprint={2307.02185},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2307.02185}
+}
+
+@misc{llm_citation_accuracy2024,
+    title={This Reference Does Not Exist: An Exploration of LLM Citation Accuracy and Relevance},
+    author={Scialom, S. and Gallé, M. and Mazurek, C.},
+    year={2024},
+    eprint={2024.hcinlp-1.3},
+    archivePrefix={ACL Anthology},
+    url={https://aclanthology.org/2024.hcinlp-1.3.pdf}
+}
+
+@misc{prd2023,
+    title={PRD: Peer Rank and Discussion Improve Large Language Model based Evaluations},
+    author={Li, Ruosen and Patel, Teerth and Du, Xinya},
+    year={2023},
+    eprint={2307.02762},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2307.02762}
+}
+
+@misc{risk_taxonomy2024,
+    title={Risk Taxonomy, Mitigation, and Assessment Benchmarks of Large Language Model Systems},
+    author={Ghosh, Soumya and others},
+    year={2024},
+    eprint={2401.05778},
+    archivePrefix={arXiv},
+    primaryClass={cs.AI},
+    url={https://arxiv.org/abs/2401.05778}
+}
+
+@misc{factuality_2024,
+    title={Factuality of Large Language Models in the Year 2024},
+    author={Zhang, Tianyi and others},
+    year={2024},
+    eprint={2402.02420},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2402.02420}
+}
+
+@misc{multihop_reasoning2024,
+    title={Evaluating LLMs' Inherent Multi-hop Reasoning Ability},
+    author={Chen, Wenhao and others},
+    year={2024},
+    eprint={2402.11924},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2402.11924}
+}
+
+@misc{benchmarking_llms_2024,
+    title={Benchmarking Large Language Models in Complex Question Answering Attribution using Knowledge Graphs},
+    author={Li, Ming and others},
+    year={2024},
+    eprint={2401.14640},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2401.14640}
+}
+
+@misc{hgot2024,
+    title={HGOT: Hierarchical Graph of Thoughts for Retrieval-Augmented In-Context Learning in Factuality Evaluation},
+    author={Zhou, Jie and others},
+    year={2024},
+    eprint={2402.09390},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2402.09390}
+}
+
+@misc{symbolic_references2023,
+    title={Towards Verifiable Text Generation with Symbolic References},
+    author={Nguyen, Tuan Manh and others},
+    year={2023},
+    eprint={2311.09188},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2311.09188}
+}
+
+@misc{attribution_bench2024,
+    title={AttributionBench: How Hard is Automatic Attribution Evaluation?},
+    author={Zhu, Youlong and others},
+    year={2024},
+    eprint={2402.15089},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2402.15089}
+}
+
+@misc{ufo2024,
+    title={UFO: a Unified and Flexible Framework for Evaluating Factuality of Large Language Models},
+    author={Huang, Lei and others},
+    year={2024},
+    eprint={2402.14690},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2402.14690}
+}
+
+@misc{ask_assess_refine2024,
+    title={Ask, Assess, and Refine: Rectifying Factual Consistency and Hallucination in LLMs with Metric-Guided Feedback Learning},
+    author={Khashabi, Daniel and others},
+    year={2024},
+    eprint={2024.eacl-long.149},
+    archivePrefix={ACL Anthology},
+    url={https://aclanthology.org/2024.eacl-long.149}
+}
+
+@misc{uda2024,
+    title={UDA: A Benchmark Suite for Retrieval Augmented Generation in Real-world Document Analysis},
+    author={Gupta, Mohit and others},
+    year={2024},
+    eprint={2406.15187},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2406.15187}
+}
+
+@misc{aliice2024,
+    title={ALiiCE: Evaluating Positional Fine-grained Citation Generation},
+    author={Shen, Yinfei and others},
+    year={2024},
+    eprint={2406.13375},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2406.13375}
+}
+
+@misc{fables2024,
+    title={FABLES: Evaluating faithfulness and content selection in book-length summarization},
+    author={Saleh, Natalie and others},
+    year={2024},
+    eprint={2404.01261},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2404.01261}
+}
+
+@misc{RoBERTa,
+      title={RoBERTa: A Robustly Optimized BERT Pretraining Approach}, 
+      author={Yinhan Liu and Myle Ott and Naman Goyal and Jingfei Du and Mandar Joshi and Danqi Chen and Omer Levy and Mike Lewis and Luke Zettlemoyer and Veselin Stoyanov},
+      year={2019},
+      eprint={1907.11692},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/1907.11692}, 
+}
+
+@misc{SQuAD,
+      title={SQuAD: 100,000+ Questions for Machine Comprehension of Text}, 
+      author={Pranav Rajpurkar and Jian Zhang and Konstantin Lopyrev and Percy Liang},
+      year={2016},
+      eprint={1606.05250},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/1606.05250}, 
+}
+
+@misc{MAUVE,
+      title={MAUVE: Measuring the Gap Between Neural Text and Human Text using Divergence Frontiers}, 
+      author={Krishna Pillutla and Swabha Swayamdipta and Rowan Zellers and John Thickstun and Sean Welleck and Yejin Choi and Zaid Harchaoui},
+      year={2021},
+      eprint={2102.01454},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2102.01454}, 
+}
+
+@inproceedings{honovich-etal-2022-true-evaluating,
+    title = "{TRUE}: Re-evaluating Factual Consistency Evaluation",
+    author = "Honovich, Or  and
+      Aharoni, Roee  and
+      Herzig, Jonathan  and
+      Taitelbaum, Hagai  and
+      Kukliansy, Doron  and
+      Cohen, Vered  and
+      Scialom, Thomas  and
+      Szpektor, Idan  and
+      Hassidim, Avinatan  and
+      Matias, Yossi",
+    booktitle = "Proceedings of the 2022 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies",
+    month = jul,
+    year = "2022",
+    address = "Seattle, United States",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.naacl-main.287",
+    doi = "10.18653/v1/2022.naacl-main.287",
+    pages = "3905--3920",
+}
+
+@misc{QAMPARI,
+      title={QAMPARI: An Open-domain Question Answering Benchmark for Questions with Many Answers from Multiple Paragraphs}, 
+      author={Samuel Joseph Amouyal and Tomer Wolfson and Ohad Rubin and Ori Yoran and Jonathan Herzig and Jonathan Berant},
+      year={2023},
+      eprint={2205.12665},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2205.12665}, 
+}
+
+@misc{ROUGE2.0,
+      title={ROUGE 2.0: Updated and Improved Measures for Evaluation of Summarization Tasks}, 
+      author={Kavita Ganesan},
+      year={2018},
+      eprint={1803.01937},
+      archivePrefix={arXiv},
+      primaryClass={cs.IR},
+      url={https://arxiv.org/abs/1803.01937}, 
 }
