--- a/Report/sections/conclusions.tex
+++ b/Report/sections/conclusions.tex
@@ -1,1 +1,1 @@
-The conclusions section.
+In conclusion, to efficiently run the model and utilize as many documents as possible, we recognized the need to employ techniques to reduce the size of the documents. While other studies have used summarization methods for this purpose, we introduced a novel approach by leveraging named entities and LLaMA 3 to reconstruct the documents. This strategy enabled us to achieve higher reference-finding metrics. We also proposed a new method for evaluating citation task that works with Perplexity.AI and Copilot models.
