--- a/Report/sections/introduction.tex
+++ b/Report/sections/introduction.tex
@@ -8,6 +8,7 @@ The proposed framework is built upon several key objectives:
 \item We introduce new metrics designed to reduce human involvement in the evaluation process, particularly by implementing automated checks for the correlation of meaning within sentence fragments.
 \item We explore methods for optimizing input processing, such as reducing the token count by providing relevant snippets and summaries.
 \item We focus on developing structured input formats that improve the consistency and accuracy of model outputs, particularly in scenarios requiring multiple document references.
+\item We suggest a new metric for evaluating the quality in citation task.
 \end{itemize}
 
 To validate our approach, we utilize a diverse set of datasets, including ASQA, QAMPARI, ELI5, and Wikidata5m, which cover a wide range of question types and information needs. These datasets provide a comprehensive foundation for testing our evaluation framework across different content domains and question formats. Moreover, we explore the use of various language models, including Vicuna, LLaMA, and established models like GPT-4, to assess the effectiveness of our proposed methods.
