--- a/Report/sections/related_work.tex
+++ b/Report/sections/related_work.tex
@@ -1,1 +1,5 @@
-This section is for mentioning related works.
+Evaluating large language models (LLMs) has become increasingly complex as the sophistication and diversity of these models have grown. Traditional evaluation metrics are often inadequate for capturing the nuanced performance characteristics of LLMs, especially in open-ended tasks like question answering. Recent work has explored alternative approaches to overcome these challenges. For instance, \cite{prd2023}\cite{lamport1994latex} propose a peer rank and discussion-based evaluation framework that involves LLMs assessing each other to mitigate self-enhancement and positional biases. Their approach focuses on pairwise comparisons and utilizes peer discussions to refine evaluations, improving alignment with human judgments. Similarly, \cite{risk_taxonomy2024}\cite{hagrid2023}\cite{rarr2022} offer a systematic analysis of risks in LLM systems, introducing a comprehensive taxonomy for evaluating and mitigating potential safety and security risks. Their work underscores the need for structured assessment methods that extend beyond performance metrics to include considerations of safety and reliability in real-world applications.
+
+Moreover, recent studies have highlighted the importance of factual accuracy in LLM-generated content. \cite{factuality_2024}\cite{verifiability2023} emphasize the growing reliance on LLMs for daily tasks, particularly in providing factually accurate information. They introduce new evaluation benchmarks to assess factuality and explore strategies to reduce misinformation, such as leveraging external knowledge retrieval and self-reflection mechanisms. Additionally, \cite{multihop_reasoning2024}\cite{automatic_eval2023} focus on multi-hop reasoning tasks, where LLMs must integrate multiple pieces of evidence to answer complex questions. Their work highlights the limitations of current benchmarks due to potential data contamination during pre-training and introduces the Inherent Reasoning Evaluation (IRE) method to more accurately assess reasoning chains. Finally, \cite{benchmarking_llms_2024}\cite{attributed_qa2022} explore the attribution of generated answers by leveraging knowledge graphs, developing a benchmark that categorizes attributions into supportive, insufficient, contradictory, and irrelevant. This fine-grained approach provides a more detailed analysis of LLMs' citation behaviors and helps improve the accuracy and reliability of automatic attribution evaluation.
+
+In addition to attribution and factuality concerns, novel frameworks have emerged to enhance LLM outputs' reliability and verification processes. \cite{hgot2024} introduce the Hierarchical Graph of Thoughts (HGOT) framework for retrieval-augmented in-context learning, which improves the selection of pertinent passages and emphasizes citation quality in answer generation. HGOT leverages a structured graph approach to enhance factual consistency, utilizing a weighted voting system that prioritizes citations with higher credibility. Similarly, \cite{symbolic_references2023}\cite{feedback_learning2023}\cite{factscore2023} propose a method for integrating symbolic references into generated text, allowing for easier manual verification by linking different spans of generated text to their source data. Further, \cite{attribution_bench2024}\cite{verifiable_generation2023} present \texttt{AttributionBench}, a comprehensive benchmark designed to evaluate the accuracy of attribution in generative models, revealing the persistent challenges even state-of-the-art models face in processing nuanced information. Finally, \cite{ufo2024} propose the UFO framework, which unifies and extends fact verification by utilizing various fact sources in a plug-and-play manner, demonstrating flexibility across different text generation tasks\cite{responsible_lm2023}. These recent innovations provide critical advancements toward improving LLM reliability in both factuality and citation accuracy\cite{nonexistent_refs2024}.
